# py-toeplitz

./: .coveragerc  .flake8  .gitignore  LICENSE  MANIFEST.in  README.rst  asv.conf.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: cygwin-python.yml  pythonpackage.yml  weeklytoxrun.yml
benchmarks/: benchmarks.py
doc/source/: conf.py  index.rst  py_toeplitz.cytoeplitz.rst  py_toeplitz.rst
src/py_toeplitz/: __init__.py  cytoeplitz.pyx
tests/: test_operator.py  test_operator_solve.py
