[metadata]
name=py-toeplitz
version=file:VERSION
description=Package for toeplitz operators.
long_description=file:README.rst
long_description_content_type=text/x-rst
platform=any

[options]
tests_require=
    pytest-cov
    hypothesis[numpy]
    scipy
install_requires=scipy
setup_requires=
    cython>=0.16
    numpy
    scipy
packages=find:
python_requires= >=2.7, <4, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[options.packages.find]
where=src

[bdist_wheel]
universal=True

[sdist]
formats=bztar,zip,gztar