[metadata]
name=py-toeplitz
version=file:VERSION
description=Package for toeplitz operators.
long_description=file:README.rst
long_description_content_type=text/x-rst
platform=any
url=https://github.com/DWesl/py-toeplitz
author=DWesl
author_email=https://github.com/DWesl/py-toeplitz/issues
classifiers=
    Development Status :: 1 - Development
    Intended Audience :: Developers
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
license=BSD3
license_file=LICENSE
license_files=
    LICENSE

[options]
tests_require=
    pytest-cov
    hypothesis[numpy]
    scipy>=0.16.0
install_requires=scipy
setup_requires=
    cython>=0.16
    numpy
    scipy>=0.16.0
packages=find:
python_requires= >=2.7, <4, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[options.packages.find]
where=src

[bdist_wheel]
universal=True

[sdist]
formats=bztar,zip,gztar